@@ -1,6 +1,6 @@
 /****
 DIAMOND protein aligner
-Copyright (C) 2013-2017 Benjamin Buchfink <buchfink@gmail.com>
+Copyright (C) 2013-2018 Benjamin Buchfink <buchfink@gmail.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -20,8 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include <algorithm>
 #include "command_line_parser.h"
 
-using std::cout;
-using std::endl;
+using namespace std;
 
 Command_line_parser & Command_line_parser::add(const Options_group & group)
 {
@@ -48,24 +47,24 @@ void Command_line_parser::store_option(const vector<string> &v)
 	vector<string> v2;
 
 	if (v[0].length() <= 1)
-		throw std::runtime_error("Invalid option syntax.");
+		throw runtime_error("Invalid option syntax.");
 	else if (v[0].substr(0, 2) == "--") {
 		id = v[0].substr(2);
-		std::map<string, Option_base*>::const_iterator i = map_.find(id);
+		map<string, Option_base*>::const_iterator i = map_.find(id);
 		if (i != map_.end())
 			o = i->second;
 	} else if (v[0][0] == '-') {
 		id = v[0][1];
-		std::map<char, Option_base*>::const_iterator i = map_short_.find(v[0][1]);
+		map<char, Option_base*>::const_iterator i = map_short_.find(v[0][1]);
 		if (i != map_short_.end())
 			o = i->second;
 		if (v[0].length() > 2)
 			v2.push_back(v[0].substr(2));
 	} else
-		throw std::runtime_error("Command line options must begin with - or --.");
+		throw runtime_error("Command line options must begin with - or --.");
 	
 	if(o == 0)
-		throw std::runtime_error("Invalid option: " + id);
+		throw runtime_error("Invalid option: " + id);
 	else {
 		v2.insert(v2.end(), v.begin() + 1, v.end());
 		o->read(v2);
@@ -75,15 +74,15 @@ void Command_line_parser::store_option(const vector<string> &v)
 void Command_line_parser::store(int count, const char ** str, unsigned &command)
 {
 	if (count < 2)
-		throw std::runtime_error("Syntax: diamond COMMAND [OPTIONS]. To print help message: diamond help");
+		throw runtime_error("Syntax: diamond COMMAND [OPTIONS]. To print help message: diamond help");
 	const string cmd(str[1]);
 	for (command = 0; command < commands_.size(); ++command)
 		if (commands_[command].first == cmd || "--" + commands_[command].first == cmd)
 			break;
 	if (command == commands_.size())
-		throw std::runtime_error("Invalid command: " + cmd + ". To print help message: diamond help");
+		throw runtime_error("Invalid command: " + cmd + ". To print help message: diamond help");
 
-	for (std::map<string, Option_base*>::const_iterator i = map_.begin(); i != map_.end(); ++i)
+	for (map<string, Option_base*>::const_iterator i = map_.begin(); i != map_.end(); ++i)
 		i->second->set_default();
 
 	vector<string> v;
@@ -114,7 +113,7 @@ void Command_line_parser::print_help()
 			string col1 = "--" + (*j)->id;
 			if ((*j)->short_id)
 				col1 += string(" (-") + (*j)->short_id + ")";
-			col1.append(std::max(col1_width, col1.length()) - col1.length(), ' ');
+			col1.append(max(col1_width, col1.length()) - col1.length(), ' ');
 			cout << col1 << (*j)->desc << endl;
 		}
 		cout << endl;
