@@ -5,6 +5,7 @@
 - Raised compiler requirement to GCC 4.6.
 - Added option to use the DAA output format for diamond view.
 - Added support for using a FASTA file as the --db parameter in alignment workflows.
+- Added CL (command line) and VN (version) fields to the @PG SAM format header line.
 
 [0.9.22]
 - Added output field full_sseq to tabular output format.
